src/main/java/com/test/coursemanagementspring/core/common/errors/AlreadyExistsException.java
package com.test.coursemanagementspring.core.common.errors;

public class AlreadyExistsException extends RuntimeException{
    public AlreadyExistsException(String message) {
        super(message);
    }
}
